--- a/2023-09_Yang_hsc.Rmd
+++ b/2023-09_Yang_hsc.Rmd
@@ -413,6 +413,18 @@ p1 + p2
 
 
 
+```{r markers_luca_et_al, fig.width=15, fig.height=15}
+
+goi_luca <- c("PLEK", "HBB", "MPO", "SPIB", "CD79A", "DNTT", "CD34", "CD164")
+# goi_long_mark <- c("CD38", "CD45RA", "CD49f", "CD90")
+
+p1 <- FeaturePlot(hsc_s, features = goi_luca, order = T, keep.scale = "all")
+p2 <- DimPlot(hsc_s, label = T)
+
+p1 + p2
+
+```
+
 
 ```{r long_lasting_hsc_markers, fig.width=10, fig.height=10, eval = F}
 
